fix spacing

--- a/assets/components/productPage/productPageContentBlock/productPageContentBlock.scss
+++ b/assets/components/productPage/productPageContentBlock/productPageContentBlock.scss
@@ -59,8 +59,12 @@
   margin-right: ($gu-h-spacing / 2 * -1);
 }
 
+// ----- Vertical rhythm ------ //
+
 .component-product-page-content-block {
-  .component-product-page-text-block {
+  .component-product-page-text-block, 
+  .component-product-page-period-form,
+  .component-product-page-info-chip {
     margin-bottom: ($gu-v-spacing*2)
   }
 }
