--- a/assets/components/productPage/productPageInfoChip/productPageInfoChip.scss
+++ b/assets/components/productPage/productPageInfoChip/productPageInfoChip.scss
@@ -1,6 +1,4 @@
 .component-product-page-info-chip {
-  padding-top: $gu-v-spacing * 2;
-  padding-bottom: $gu-v-spacing * 2.5;
   font-family: $gu-text-sans-web;
   font-size: 16px;
   svg {
